package it.unibo.wildenc.samples;

public interface Collectible extends MapObject {

    int getValue();

}
