package it.unibo.wildenc.samples;

public interface Enemy extends Entity {

    String getName();

}
