package it.unibo.wildenc.samples;

public interface MapObject {

    Point2D getPosition();

}
