package it.unibo.wildenc.samples;

public interface Movable extends MapObject {

    boolean moveTop(Point2D p);

}
