package it.unibo.wildenc.samples;

public interface Projectile extends Movable {

    int getDamage();

}
